2005-09-23  Christian Persch  <chpe@cvs.gnome.org>

	* data/Makefile.am:
	R data/epiphany-extension.xsd:
	* src/ephy-extensions-manager.c:
	(ephy_extensions_manager_load_xml_string),
	(ephy_extensions_manager_startup),
	(ephy_extensions_manager_finalize):

	Since the .xml format is deprecated, remove the (already #if 0'd)
	schema validation code.

2005-09-23  Crispin Flowerday  <gnome@flowerday.cx>

	* data/epiphany.m4: Really add the file

2005-09-23  Crispin Flowerday  <gnome@flowerday.cx>

	* data/Makefile.am:
	* data/epiphany.m4:
	* src/ephy-extensions-manager.c: (free_extension_info),
	(ephy_extensions_manager_load_xml_string),
	(ephy_extensions_manager_load_ini_string), (path_to_identifier),
	(ephy_extensions_manager_load_file), (load_extension),
	(load_file_from_monitor), (dir_changed_cb),
	(ephy_extensions_manager_load_dir):

	Add support for extension description files in the keyfile
	format, using the extension .ephy-extension. Also included
	is a m4 macro to help do the translation of these files.
	
2005-09-21  Jean-François Rameau  <jframeau@cvs.gnome.org>

	* embed/mozilla/mozilla-embed-single.cpp: (have_gnome_url_handler):

	Remove unused function.

2005-09-21  Christian Persch  <chpe@cvs.gnome.org>

	* lib/ephy-gui.c:

	Fix compile warnings.

2005-09-21  Christian Persch  <chpe@cvs.gnome.org>

	* embed/mozilla/EphyUtils.cpp:
	* embed/print-dialog.c: (ephy_print_do_print_idle_cb):

	Don't use "cat >" as output command, it fails inpredicably.
	Instead, use the tempfile setting, and set "PostScript/default"
	as printer name. fflush before printing the temp file
	using gnome-print. If not using gecko 1.9, translate the paper
	name to the one mozilla expects (mozilla bug 
	https://bugzilla.mozilla.org/show_bug.cgi?id=307404).

2005-09-21  Christian Persch  <chpe@cvs.gnome.org>

	* lib/ephy-gui.c: (ephy_gui_check_location_writable):
	* lib/ephy-gui.h:

	New function to check the filename/directory for writability,