@@ -1,5 +1,12 @@
 2005-09-23  Christian Persch  <chpe@cvs.gnome.org>
 
+	* lib/ephy-shlib-loader.c: (impl_get_object)
+	(ephy_shlib_loader_class_init):
+
+	Support "Library" argument.
+
+2005-09-23  Christian Persch  <chpe@cvs.gnome.org>
+
 	* data/Makefile.am:
 	R data/epiphany-extension.xsd:
 	* src/ephy-extensions-manager.c:
